# lircd

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs  irc_codec_decode.rs
src/: common_api.rs  config.rs  error.rs  errors.rs  irc.rs  lib.rs  main.rs  net.rs  reader.rs  tokio.rs
src/irc/: command.rs  message.rs  mod.rs
tests/: client.rs  test.rs
