[package]
name = "lircd"
version = "0.0.1"
authors = [ "Matthias Devlamynck <matthias.devlamynck@mailoo.org>" ]
repository = "https://github.com/mdevlamynck/lircd"
license = "AGPL-3.0+"
readme = "README.md"
description = "IRC  erver in Rust, just to try out the language. This has no intention of being a production project yet."
keywords = ["irc", "server"]

[lib]
name = "lircd"

[[bin]]
name = "lircd"
doc = false

[dependencies]
bytes = "*"
docopt = { git = "https://github.com/mdevlamynck/docopt.rs.git" }
env_logger = "*"
log = "*"
memchr = "*"
mioco = "*"
resolve = "*"
serde = "*"
serde_derive = "*"
simple-signal = "*"
toml = "*"
indoc = "*"
futures = "*"
tokio-core = "*"
tokio-io = "*"
tokio-proto = "*"
tokio-service = "*"
tokio-signal = "*"
libc = "*"
lazy_static = "*"

[dev-dependencies]
rand = "*"
tempdir = "*"

[features]
unstable = []
